--- a/modelgp.html
+++ b/modelgp.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<h1>UN ID:18406484</h1>
-	<a href="https://mecoder01.github.io/RICHIRICHme/social.html"><h1>https://mecoder01.github.io/RICHIRICHme/social.html</h1></a>
+	<a href="https://mecoder01.github.io/RICHIRICHme/"><h1>https://mecoder01.github.io/RICHIRICHme/</h1></a>
 <h1>Table of Content</h1>
 1. Introduction<br>
 2. UI_Design<br>
